objects/INX_Activity__c.object
<CustomObject>
    <description>Stores activities created in Infinit</description>
    <fields>
        <fullName>INX_Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>INX_Activity_Timestamp__c</fullName>
        <label>Activity timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INX_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Close_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>INX_Deployment__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INX_Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Hash__c</fullName>
        <label>Commit (hash)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INX_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instance</label>
        <referenceTo>INX_Instance__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INX_Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Needs_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INX_Package_Directory__c</fullName>
        <label>Package directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>INX_Package__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INX_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>INX_Repository__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INX_Resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Source_Branch__c</fullName>
        <label>Source branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INX_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag</label>
        <referenceTo>INX_Tag__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INX_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>INX_Type__c</columns>
        <columns>INX_Sub_Type__c</columns>
        <columns>INX_Action__c</columns>
        <columns>INX_Activity_Date__c</columns>
        <columns>INX_Name__c</columns>
        <columns>INX_Repository__c</columns>
        <columns>INX_Instance__c</columns>
        <columns>INX_Email__c</columns>
        <columns>INX_Source__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>